--- a/Eimbee.Blazor/Shared/NavMenu.razor
+++ b/Eimbee.Blazor/Shared/NavMenu.razor
@@ -1,40 +1,33 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+﻿@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager Navigation
 @inject SignOutSessionStateManager SignOutManager
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-home"></i></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Tracking Map</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Airports</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">VA Management Centre</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pilot Centre</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="Administration">Administration</a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link" @onclick="BeginLogout">Logout  <i class="fas fa-sign-out-alt"></i></button>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-@code {
-    private async Task BeginLogout(MouseEventArgs args)
-    {
-        await SignOutManager.SetSignOutState();
-        Navigation.NavigateTo("authentication/logout");
-    }
-}
+<AuthorizeView>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-home"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tracking Map</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Airports</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">VA Management Centre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pilot Centre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Admin/Administration">Administration</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Auth/Logout">Logout  <i class="fas fa-sign-out-alt"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</AuthorizeView>
