Move auth to Okta

--- a/Eimbee.Blazor/App.razor
+++ b/Eimbee.Blazor/App.razor
@@ -9,10 +9,7 @@
                     }
                     else
                     {
-                        <p>
-                            You are not authorized to access
-                            this resource.
-                        </p>
+                        <p>You are not authorized to access this resource.</p>
                     }
                 </NotAuthorized>
             </AuthorizeRouteView>
