--- a/Eimbee.Blazor/Pages/Auth/logout.razor
+++ b/Eimbee.Blazor/Pages/Auth/logout.razor
@@ -7,6 +7,6 @@
     protected override void OnInitialized()
     {
         SignOutManager.SetSignOutState();
-        Navigation.NavigateTo("authentication/logout");
+        Navigation.NavigateTo("authentication/Logout");
     }
 }
